examples/bad/empty-list-in-type-definition.hp
def f :: Int -> Int -> [] -> Bool = _;

# Char _ is also a syntax error, but we won't get that far.
